Set background to rows instead of cells to fix OSX scrollbar
Fixes #158

--- a/css/fake_table.css
+++ b/css/fake_table.css
@@ -70,7 +70,7 @@
   width: 100%;
 }
 
-.row-wrapper:nth-of-type(2n) .cell {
+.row-wrapper:nth-of-type(2n) {
   background: #f3f3f3;
 }
 
